Full website is completed

--- a/events.html
+++ b/events.html
@@ -43,7 +43,7 @@
     <section class="section3">
     <div class="row gx-1">
         <div class="col-lg-3 col-sm-6">
-      <div class="card">
+      <div class="card h-100">
         <img class="card-img-top" src="./assets/event1.jpeg" alt="heritage" height="200px">
         <div class="card-body">
           <h5 class="card-title">Heritage and tousrism celebration</h5>
@@ -54,7 +54,7 @@
     </div>
       </div>
       <div class="col-lg-3 col-sm-6">
-      <div class="card">
+      <div class="card h-100">
         <img class="card-img-top" src="./assets/event2.jpeg" alt="Cultural Food" height="200px">
         <div class="card-body">
           <h5 class="card-title">Cultural Food Fest</h5>
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="col-lg-3 col-sm-6">
-      <div class="card">
+      <div class="card h-100">
         <img class="card-img-top" src="./assets/event3.jpg" alt="Donation drives" height="200px">
         <div class="card-body">
           <h5 class="card-title">Donation drives</h5>
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div class="col-lg-3 col-sm-6">
-      <div class="card">
+      <div class="card h-100">
         <img class="card-img-top" src="./assets/event4.jpg" alt="environment" height="200px">
         <div class="card-body">
           <h5 class="card-title">Environment drive</h5>
@@ -90,6 +90,16 @@
 
 </main>
 </div>
+<footer class="footer bg-dark h-100">
+  <div class="container text-left">
+      <small style="color:grey" class="copyright">Copyright &copy Adithya Simmy</small>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-skype pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-google-plus pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-linkedin pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-twitter pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="bi bi-facebook">  </small></a>
+  </div><!--End container-->
+</footer><!--End footer 2-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
