--- a/home.html
+++ b/home.html
@@ -41,12 +41,31 @@
 </header>
 <main>
   <section class="section1">
-    <div class="div1">
-      <ul class="gx-2">
-        <li>Participation and Engagement</li>
-        <li>Networking and Upskilling</li>
-        <li>Contribution,Leadership and Growth</li>
-      </ul>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block h-50 w-100" src="./assets/photo1.jpg" alt="First slide" >
+        </div>
+        <div class="carousel-item">
+          <img class="d-block h-50 w-100" src="./assets/photo2.jpeg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block h-50 w-100" src="./assets/photo3.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </section>
   <section class="section2">
@@ -61,6 +80,16 @@
     </div>
   </section>
 </main>
+<footer class="footer bg-dark h-100">
+  <div class="container text-left">
+      <small style="color:grey" class="copyright">Copyright &copy Adithya Simmy</small>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-skype pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-google-plus pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-linkedin pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="fa fa-lg fa-twitter pull-right">  </small></a>
+      <a href="#"><small style="color:grey" class="bi bi-facebook">  </small></a>
+  </div><!--End container-->
+</footer><!--End footer 2-->
 </div> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
